# libiconv

./: CMakeLists.txt
cmake/: iconv-config.cmake
include/: iconv.h
lib/: aliases.h  canonical.h  canonical_dos.h  canonical_local.h  genflags.c  iconv.c  relocatable.c
libcharset/lib/: localcharset.c
